Compiler/tests/bad/artith3.nx
type t = [0 .. 10];

val a : array t of t;

print(10 - a);
